c4prj2_input/grade.txt
Grading at Sat May 16 19:01:45 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:36:12: error: passing argument 1 of ‘printf’ from incompatible pointer type [-Werror=incompatible-pointer-types]
     printf(stderr, "Not enough cards to draw and replace all future cards \n");
            ^
In file included from future.c:1:0:
/usr/include/stdio.h:362:12: note: expected ‘const char * restrict’ but argument is of type ‘struct _IO_FILE *’
 extern int printf (const char *__restrict __format, ...);
            ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
